tests/error/inout_errors/shadow_if.err
Error: Borrow shadowed (at $FILE:8:8)
  | 
6 | def test(q: qubit, b: bool) -> None:
7 |     if b:
8 |         q = qubit()
  |         ^ Assignment shadows borrowed argument `q`

Help: Consider assigning to a different name

Guppy compilation failed due to 1 previous error
